autotests/kfiledialog_unittest.cpp
@@ -92,6 +92,8 @@ private Q_SLOTS:
 
             KFileWidget *fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             KDirOperator *op = fw->dirOperator();
             QCOMPARE(fileViewToString(op->viewMode()), fileViewToString(KFile::Tree));
             fw->setViewMode(KFile::Simple);
@@ -120,6 +122,8 @@ private Q_SLOTS:
 
             KFileWidget *fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             QCOMPARE(fw->isVisible(), true);
             fw->slotCancel();
         }
@@ -133,6 +137,8 @@ private Q_SLOTS:
 
             KFileWidget *fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             QCOMPARE(fw->isVisible(), true);
             fw->slotCancel();
         }
@@ -147,6 +153,8 @@ private Q_SLOTS:
 
             KFileWidget *fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             QCOMPARE(fw->isVisible(), true);
             fw->slotCancel();
         }
@@ -160,6 +168,8 @@ private Q_SLOTS:
 
             KFileWidget *fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             QCOMPARE(fw->isVisible(), true);
             fw->slotCancel();
         }
