autotests/kfiledialogqml_unittest.cpp
@@ -48,6 +48,8 @@ private Q_SLOTS:
 
             fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             QCOMPARE(fw->isVisible(), true);
             fw->slotCancel();
         }
@@ -65,6 +67,8 @@ private Q_SLOTS:
 
             fw = findFileWidget();
             QVERIFY(fw);
+            // real show() is delayed to next event.
+            QTest::qWaitForWindowExposed(fw->window());
             QCOMPARE(fw->isVisible(), true);
             fw->slotCancel();
         }
